# pasito.fun-event-scripts

./: .gitignore  LICENSE  README.md  create_fb_event.py  pasito_event_scraper.py  pyproject.toml  requirements.txt  setup.cfg  test_pasito_event_scraper.py
.github/workflows/: post-commit.yml  pre-commit.yml
docs/: README.md
pasito_event_scripts/: __init__.py  create_fb_event.py  event_processor.py
tests/: __init__.py  test_create_fb_event.py
