[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pasito_event_scripts"
version = "0.1.0"
description = "Automated Facebook event creation from Pasito event pages"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Damilola"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pasito.fun-event-scripts"
"Bug Tracker" = "https://github.com/yourusername/pasito.fun-event-scripts/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$' 